tests/cases/scc/error/0029-eof.c.res
./tests/cases/scc/error/0029-eof.c:5:1:	error:   expected a type name.
exit code 1
